--- a/config.json
+++ b/config.json
@@ -58,17 +58,17 @@
   "wsextservice": "local_mobile",
   "customurlscheme": "lpmobile",
   "siteurl": "https://exams.learnersplatform.com",
-  "sitename": "",
+  "sitename": "LearnersPlatform",
   "multisitesdisplay": "",
   "skipssoconfirmation": false,
   "forcedefaultlanguage": false,
   "privacypolicy": "https:\/\/learnersplatform.com\/mod\/page\/view.php?id=8148",
-  "notificoncolor": "#f98012",
+  "notificoncolor": "#ed177a",
   "statusbarbg": false,
   "statusbarlighttext": false,
-  "statusbarbgios": "#f98012",
+  "statusbarbgios": "#ed177a",
   "statusbarlighttextios": true,
-  "statusbarbgandroid": "#df7310",
+  "statusbarbgandroid": "#6c2063",
   "statusbarlighttextandroid": true,
   "statusbarbgremotetheme": "#000000",
   "statusbarlighttextremotetheme": true,
