--- a/config.json
+++ b/config.json
@@ -66,19 +66,19 @@
   "customurlscheme": "lpmobile",
   "siteurl": [
     {
-      "name": "LearnersPlatform Exams",
-      "url": "https://exams.learnersplatform.com"
+      "name": "LearnersPlatform question bank",
+      "url": "https://lpquestionbank.learnersplatform.com"
     },
     {
-      "name": "LearnersPlatform Med",
-      "url": "https://med.learnersplatform.com"
+      "name": "LearnersPlatform tutorial",
+      "url": "https://lptutorial.learnersplatform.com"
     }
   ],
   "sitename": "LearnersPlatform",
   "multisitesdisplay": "",
   "skipssoconfirmation": false,
   "forcedefaultlanguage": false,
-  "privacypolicy": "https:\/\/moodle.org\/mod\/page\/view.php?id=8148",
+  "privacypolicy": "https:\/\/learnersplatform.com\/mod\/page\/view.php?id=8148",
   "notificoncolor": "#ed177a",
   "statusbarbg": false,
   "statusbarlighttext": false,
